hydroflow/tests/compile-fail/surface_forwardref_self1.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        f = f -> f;
    };
    df.run_available();
}
