hydroflow/tests/compile-fail/surface_forwardref_self1.stderr
error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self1.rs:5:18
  |
5 |         f = f -> f;
  |                  ^

error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self1.rs:5:13
  |
5 |         f = f -> f;
  |             ^
